[package]
name = "nvgpu"
version = "0.1.0"
authors = ["Thog <contact@thog.eu>"]
edition = "2018"

[dependencies]
nvmap = { path = "../nvmap" }
nvhost = { path = "../nvhost" }
bitflags = "1.0"
bitfield = "0.13"
nix = "0.15.0"
libc = "0.2"

[[bin]]
name = "nvgpu_gpfifo_decoder"
path = "src/bin/gpfifo_decoder.rs"
